--- a/q2_taxa/assets/index.html
+++ b/q2_taxa/assets/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}q2-taxa : barplot{% endblock %}
+
 {% block head %}
 <script src='dist/vendor.bundle.js'></script>
 {% endblock %}
