--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -2,6 +2,28 @@
 
 {% block head %}
 <script src='dist/vendor.bundle.js'></script>
+<style type="text/css">
+  .plot {
+    display: flex;
+  }
+
+  .bars {
+    overflow-x: scroll;
+    max-width: 75%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .legend {
+    flex-grow: 1;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    max-width: 25%;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 18px;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
