SQUASH: `auto`-bots: `scroll` out!

--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -8,7 +8,7 @@
   }
 
   .bars {
-    overflow-x: scroll;
+    overflow-x: auto;
     max-width: 75%;
     margin-left: 15px;
     margin-right: 15px;
@@ -16,8 +16,8 @@
 
   .legend {
     flex-grow: 1;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
     max-width: 25%;
     margin-left: 15px;
     margin-right: 15px;
