--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -3,6 +3,10 @@
 {% block head %}
 <script src='dist/vendor.bundle.js'></script>
 <style type="text/css">
+  .viz {
+    padding-top: 5px;
+  }
+
   .plot {
     display: flex;
   }
@@ -18,7 +22,6 @@
     flex-grow: 1;
     overflow-x: auto;
     overflow-y: auto;
-    max-width: 25%;
     margin-left: 15px;
     margin-right: 15px;
     margin-top: 18px;
