--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -2,6 +2,30 @@
 
 {% block head %}
 <script src='dist/vendor.bundle.js'></script>
+<style type="text/css">
+  .viz {
+    padding-top: 5px;
+  }
+
+  .plot {
+    display: flex;
+  }
+
+  .bars {
+    overflow-x: auto;
+    max-width: 75%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .legend {
+    overflow-x: auto;
+    overflow-y: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 18px;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
