feat: add # of cols of metadata to vis

--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -29,6 +29,7 @@
 {% endblock %}
 
 {% block content %}
+    <p>Number of metadata columns provided: {{ num_metadata_cols }}</p>
     <script>
       var d = [];
       function load_data(level, taxaKeys, allKeys, data) {
