imp: display md col count in barplot viz (#139)

--- a/q2_taxa/assets/barplot/index.html
+++ b/q2_taxa/assets/barplot/index.html
@@ -45,4 +45,5 @@
     <script src='{{ level }}?callback=load_data'></script>
     {% endfor %}
     <script src='dist/bundle.js'></script>
+    <p>Number of sample metadata columns provided: {{ num_metadata_cols }}</p>
 {% endblock %}
